# simple_load_balancer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: load_test.js
src/: __init__.py  main.py
src/application/: config.py  services.py  strategies.py
src/core/: config.py  enums.py  types.py  utils.py
src/domain/: enums.py  repositories.py  schemas.py
src/infrastructure/cache/: config.py  repository.py
src/infrastructure/database/: bootstrap.py  config.py  session.py  types.py
src/infrastructure/database/models/: base.py  cdn.py  mixins.py  origin.py  settings.py
src/infrastructure/database/repositories/: base.py  cdn.py  origin.py
src/presentation/rest/: api.py  dependencies.py
